fix nav alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 nav{
   display: flex;
-  /* justify-content: space-around; */
+  justify-content: space-around;
   align-items: center;
   min-height: 8vh;
   background-color: #ff3627;
